added navbar imported

--- a/src/app/authenticator/authenticator.component.html
+++ b/src/app/authenticator/authenticator.component.html
@@ -5,7 +5,7 @@
         <router-outlet/>
       </div>
       <div class="md:h-full rounded-xl">
-        <img src="https://wallpapercave.com/wp/wp4924025.jpg" class="w-full h-full object-cover" alt="login-image" />
+        <img src="https://c0.wallpaperflare.com/preview/843/976/970/business-background-illustration-people.jpg" class="w-full h-full object-cover" alt="login-image" />
       </div>      
     </div>
   </div>
