--- a/src/app/shared/loading-spinner/loading-spinner.component.html
+++ b/src/app/shared/loading-spinner/loading-spinner.component.html
@@ -1,9 +1,4 @@
-<div class="min-h-60 flex flex-col bg-white dark:bg-neutral-800 dark:border-neutral-700 dark:shadow-neutral-700/70">
-    <div class="flex flex-auto flex-col justify-center items-center p-4 md:p-5">
-      <div class="flex justify-center">
-        <div class="animate-spin inline-block size-6 border-[3px] border-current border-t-transparent text-blue-600 rounded-full dark:text-blue-500" role="status" aria-label="loading">
-          <span class="sr-only">Loading...</span>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="min-h-60 flex flex-col items-center justify-center text-[#168aad]">
+  <div class="animate-spin rounded-full h-12 w-12 border-t-4 border-b-4 border-[#168aad] border-t-transparent mb-4" role="status" aria-label="loading"></div>
+  <p class="text-sm font-medium text-[#4b4b4b]">Loading, please wait...</p>
+</div>
