updated mail-box component

--- a/src/app/flux/outreach/mail-box/mail-box.component.html
+++ b/src/app/flux/outreach/mail-box/mail-box.component.html
@@ -83,7 +83,7 @@
       <!-- Main content area - Mail Thread Component -->
       <main class="flex-1 overflow-auto p-5">
         <!-- This is where your MailThreadComponent will be rendered -->
-        <app-mail-thread [filter]="selectedFilter"></app-mail-thread>
+        <app-mail-thread [filter]="selectedFilter" [thread_owner]="threadOwner"></app-mail-thread>
       </main>
     </div>
   
