--- a/src/app/flux/navbar/navbar.component.html
+++ b/src/app/flux/navbar/navbar.component.html
@@ -57,12 +57,12 @@
           </a>
         </li>
         <li>
-          <a [routerLink]="['organizations']" [ngClass]="{'bg-[#eaf4f4] border-l-4 border-[#ff7f50] text-[#168aad]': isActive('/organizations')}"
+          <a [routerLink]="['organisations']" [ngClass]="{'bg-[#eaf4f4] border-l-4 border-[#ff7f50] text-[#168aad]': isActive('/organizations')}"
              class="flex items-center space-x-3 px-4 py-3 rounded-md text-sm font-medium text-[#4b4b4b] hover:bg-[#fef1e6] transition">
             <svg class="w-5 h-5 text-[#168aad]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"/>
             </svg>
-            <span *ngIf="!isCollapsed">Organizations</span>
+            <span *ngIf="!isCollapsed">Organisations</span>
           </a>
         </li>
         <li>
