--- a/src/app/flux/note-maker/note-maker.component.html
+++ b/src/app/flux/note-maker/note-maker.component.html
@@ -19,6 +19,7 @@
         </svg>
         <input
           type="text"
+          [formControl]="searchParam"
           placeholder="Search notes"
           class="w-full pl-9 pr-3 py-2 bg-[var(--color-bg-sidebar)] text-sm rounded-lg border border-[var(--color-border)] focus:ring-2 focus:ring-[var(--color-primary)] focus:border-[var(--color-primary)]"
         />
