--- a/src/app/flux/navbar/navbar.component.html
+++ b/src/app/flux/navbar/navbar.component.html
@@ -57,21 +57,21 @@
           </a>
         </li>
         <li>
-          <a [routerLink]="['organisations']" [ngClass]="{'bg-[#eaf4f4] border-l-4 border-[#ff7f50] text-[#168aad]': isActive('/organizations')}"
-             class="flex items-center space-x-3 px-4 py-3 rounded-md text-sm font-medium text-[#4b4b4b] hover:bg-[#fef1e6] transition">
-            <svg class="w-5 h-5 text-[#168aad]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"/>
-            </svg>
-            <span *ngIf="!isCollapsed">Organisations</span>
-          </a>
-        </li>
-        <li>
           <a [routerLink]="['connections']" [ngClass]="{'bg-[#eaf4f4] border-l-4 border-[#ff7f50] text-[#168aad]': isActive('/connections')}"
              class="flex items-center space-x-3 px-4 py-3 rounded-md text-sm font-medium text-[#4b4b4b] hover:bg-[#fef1e6] transition">
             <svg class="w-5 h-5 text-[#168aad]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"/>
             </svg>
             <span *ngIf="!isCollapsed">Connections</span>
+          </a>
+        </li>
+        <li>
+          <a [routerLink]="['organisations']" [ngClass]="{'bg-[#eaf4f4] border-l-4 border-[#ff7f50] text-[#168aad]': isActive('/organisations')}"
+             class="flex items-center space-x-3 px-4 py-3 rounded-md text-sm font-medium text-[#4b4b4b] hover:bg-[#fef1e6] transition">
+            <svg class="w-5 h-5 text-[#168aad]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"/>
+            </svg>
+            <span *ngIf="!isCollapsed">Organisations</span>
           </a>
         </li>
 
