--- a/src/app/flux/organisations/organisation-detail/organisation-detail.component.html
+++ b/src/app/flux/organisations/organisation-detail/organisation-detail.component.html
@@ -101,4 +101,14 @@
       (close)="closeModal()"
       (refresh)="refreshList($event)"
     ></app-add-organisation>
+
+    <!-- Delete Modal -->
+    <app-delete-modal
+      [isOpen]="showDeleteModal"
+      title="Delete Organization"
+      message="Are you sure you want to delete this organization? This action cannot be undone."
+      [itemName]="organisation?.name"
+      (confirm)="onDeleteConfirm()"
+      (cancel)="onDeleteCancel()">
+    </app-delete-modal>
     }
