--- a/src/app/flux/applications/application-detail/application-detail.component.html
+++ b/src/app/flux/applications/application-detail/application-detail.component.html
@@ -209,8 +209,19 @@
   </div>
 </div>
 
-<!-- Edit Modal -->
-<app-add-application *ngIf="showEditModal" 
-                     [application]="application"
-                     (closeModal)="onEditModalClose($event)">
+<!-- Edit Application Modal -->
+<app-add-application
+  *ngIf="showEditModal"
+  [application]="application"
+  (closeModal)="onEditModalClose($event)">
 </app-add-application>
+
+<!-- Delete Modal -->
+<app-delete-modal
+  [isOpen]="showDeleteModal"
+  [title]="'Delete Application'"
+  [message]="'Are you sure you want to delete this application?'"
+  [itemName]="application?.title"
+  (confirm)="onDeleteConfirm()"
+  (cancel)="onDeleteCancel()">
+</app-delete-modal>
