--- a/src/app/flux/connections/connection-detail/connection-detail.component.html
+++ b/src/app/flux/connections/connection-detail/connection-detail.component.html
@@ -320,3 +320,13 @@
     </div>
   </div>
 </div>
+
+<!-- Delete Modal -->
+<app-delete-modal
+  [isOpen]="showDeleteModal"
+  title="Delete Connection"
+  message="Are you sure you want to delete this connection? This action cannot be undone."
+  [itemName]="connection?.name"
+  (confirm)="onDeleteConfirm()"
+  (cancel)="onDeleteCancel()">
+</app-delete-modal>
